--- a/public/views/login.html
+++ b/public/views/login.html
@@ -14,4 +14,7 @@
             <button type="submit" ng-click='loginLocal()'>Login</button>
         </div>
     </div>
+    <button ng-click="loginAlliedCommand()">Login Allied Command</button>
+    <button ng-click="loginAxisDecoder()">Login Axis Decoder</button>
+    <button ng-click="loginAdmin()">Login Admin</button>
 </section>
